tests/NormalTests/paczka1/small_fuzzy/72282405.err
Error in line 1: TngvXDtw9 A655 7,4
Error in line 8: S574 S574 195,4
